--- a/Tpl/Admin/Default/System/pageList.html
+++ b/Tpl/Admin/Default/System/pageList.html
@@ -3,9 +3,9 @@
         <h2>管理员列表</h2>
     </div>
     <div class="contentbox" data-uri='{:U("Admin/System/doEditStatus")}'>
-        <table width="100%">
+        <table width="100%" class="list td_align">
             <thead>
-                <tr>
+<!--                <tr>
                     <th><input name="u_id" type="checkbox" id="checkboxall" /></th>
                     <th>操作</th>
                     <th>头像</th>
@@ -17,6 +17,19 @@
                     <th>创建时间</th>
                     <th>更新时间</th>
                     <th>状态</th>
+                </tr>-->
+                <tr class="even">
+                    <td class="field_head"><input name="u_id" type="checkbox" id="checkboxall" /></td>
+                    <td class="field_head">操作</td>
+                    <td class="field_head">头像</td>
+                    <td class="field_head">管理员帐号</td>
+                    <td class="field_head">所属组</td>
+                    <td class="field_head">最后登录时间</td>
+                    <td class="field_head">最后登录IP</td>
+                    <td class="field_head">登录次数</td>
+                    <td class="field_head">创建时间</td>
+                    <td class="field_head">更新时间</td>
+                    <td class="field_head">状态</td>
                 </tr>
             </thead>
             <tbody>
