--- a/Tpl/Admin/Default/System/pageLogList.html
+++ b/Tpl/Admin/Default/System/pageLogList.html
@@ -3,22 +3,22 @@
         <h2>管理员列表</h2>
     </div>
     <div class="contentbox" data-uri='{:U("Admin/System/doEditStatus")}'>
-        <table width="100%">
+        <table width="100%" class="list td_align">
             <thead>
-                <tr>
-                    <th>登陆者</th>
-                    <th>最后登录IP</th>
-                    <th>地点(仅供参考)</th>
-                    <th>登录时间</th>
+                <tr class="even">
+                    <td class="field_head">登陆者</td>
+                    <td class="field_head">最后登录IP</td>
+                    <td class="field_head">地点(仅供参考)</td>
+                    <td class="field_head">登录时间</td>
                 </tr>
             </thead>
             <tbody>
             <volist name="data" id="vo">
                 <tr id="list_{$vo.u_id}">
-                    <td class="center">{$vo.u_name}</td>
-                    <td class="center">{$vo.log_ip}</td>
-                    <td class="center">{$vo.ip_location.country} / {$vo.ip_location.area}</td>
-                    <td class="center">{$vo.log_create|default="0000-00-00 00:00:00"}</td>
+                    <td>{$vo.u_name}</td>
+                    <td>{$vo.log_ip}</td>
+                    <td>{$vo.ip_location.country} / {$vo.ip_location.area}</td>
+                    <td>{$vo.log_create|default="0000-00-00 00:00:00"}</td>
                 </tr>
             </volist>
             <empty name="data">
