--- a/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
@@ -46,8 +46,8 @@
                 <li>
                     <a class="expanded heading">权限节点管理</a>
                     <ul class="navigation">
-                        <li><a href="#" title="">节点列表</a></li>
-                        <li><a href="#" title="">添加节点</a></li>
+                        <li><a href="{:U('Admin/RoleNode/pageList')}" title="">节点列表</a></li>
+                        <li><a href="{:U('Admin/RoleNode/addRoleNode')}" title="">添加节点</a></li>
                     </ul>
                 </li>
                 <li>
