--- a/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
@@ -39,8 +39,8 @@
                 <li>
                     <a class="expanded heading">权限组管理</a>
                     <ul class="navigation">
-                        <li><a href="#" title="">角色列表</a></li>
-                        <li><a href="#" title="">添加角色</a></li>
+                        <li><a href="{:U('Admin/Role/pageList')}" title="">角色列表</a></li>
+                        <li><a href="{:U('Admin/Role/addRole')}" title="">添加角色</a></li>
                     </ul>
                 </li>
                 <li>
