--- a/branches/2.0/Tpl/Admin/Default/Common/incHeader.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incHeader.html
@@ -1,6 +1,14 @@
 <!--<a href="" title=""><img src="__PUBLIC__/Admin/images/cp_logo.png" alt="Control Panel" class="logo" /></a>-->
-<div id="searcharea">
+<!--<div id="searcharea">
     <p class="left smltxt"><a href="#" title="">Advanced</a></p>
     <input type="text" class="searchbox" value="Search control panel..." onclick="if (this.value =='Search control panel...'){this.value=''}"/>
     <input type="submit" value="Search" class="searchbtn" />
+</div>-->
+<div class="top_menus">
+   <ul class="ul_menus"> 
+       <li>111</li>
+       <li>111</li>
+       <li>111</li>
+   </ul>
 </div>
+
