--- a/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.0/Tpl/Admin/Default/Common/incMenu.html
@@ -31,7 +31,7 @@
                 <li>
                     <a class="expanded heading">管理员管理</a>
                     <ul class="navigation">
-                        <li><a href="{:U('Admin/System/index')}" title="管理员列表">管理员列表</a></li>
+                        <li><a class="on"  href='{:U("Admin/System/index")}'  title="管理员列表" >管理员列表</a></li>
                         <li><a href="{:U('Admin/System/pageAddAdmin')}" title="添加管理员">添加管理员</a></li>
                         <li><a href="{:U('Admin/System/pageLogList')}" title="管理员登陆日志">管理员登陆日志</a></li>
                     </ul>
