--- a/branches/2.1/Tpl/Admin/Default/Common/incHeader.html
+++ b/branches/2.1/Tpl/Admin/Default/Common/incHeader.html
@@ -1,14 +1,45 @@
-<!--<a href="" title=""><img src="__PUBLIC__/Admin/images/cp_logo.png" alt="Control Panel" class="logo" /></a>-->
-<!--<div id="searcharea">
-    <p class="left smltxt"><a href="#" title="">Advanced</a></p>
-    <input type="text" class="searchbox" value="Search control panel..." onclick="if (this.value =='Search control panel...'){this.value=''}"/>
-    <input type="submit" value="Search" class="searchbtn" />
-</div>-->
-<div class="top_menus">
-   <ul class="ul_menus"> 
-       <li>111</li>
-       <li>111</li>
-       <li>111</li>
-   </ul>
+<div class="layout-header"> <!-- Title/Logo - can use text instead of image -->
+    <div id="title"><a href="./index_files/index.htm"></a></div>
+    <div id="topnav" class="top-nav">
+        <ul>
+            <li class="adminid" title="您好:admin">您好&nbsp;:&nbsp;<strong>admin</strong></li>
+            <li><a href="http://www.shopnctest.com/huli/index.php?act=index&op=modifypw" target="workspace"><span>修改密码</span></a></li>
+            <li><a href="http://www.shopnctest.com/huli/index.php?act=index&op=logout" title="退出"><span>退出</span></a></li>
+            <li><a href="http://www.shopnctest.com/" target="_blank" title="商城首页"><span>商城首页</span></a></li>
+        </ul>
+    </div>
+    <nav id="nav" class="main-nav">
+        <ul>
+            <li><a class="link actived" id="nav_dashboard" href="javascript:;" onclick="openItem(&#39;dashboard&#39;);"><span>控制台</span></a></li>
+            <li><a class="link" id="nav_setting" href="javascript:;" onclick="openItem(&#39;setting&#39;);"><span>设置</span></a></li>
+            <li><a class="link" id="nav_goods" href="javascript:;" onclick="openItem(&#39;goods&#39;);"><span>商品</span></a></li>
+            <li><a class="link" id="nav_store" href="javascript:;" onclick="openItem(&#39;store&#39;);"><span>店铺</span></a></li>
+            <li><a class="link" id="nav_member" href="javascript:;" onclick="openItem(&#39;member&#39;);"><span>会员</span></a></li>
+            <li><a class="link" id="nav_trade" href="javascript:;" onclick="openItem(&#39;trade&#39;);"><span>交易</span></a></li>
+            <li><a class="link" id="nav_website" href="javascript:;" onclick="openItem(&#39;website&#39;);"><span>网站</span></a></li>
+            <li><a class="link" id="nav_operation" href="javascript:;" onclick="openItem(&#39;operation&#39;);"><span>运营</span></a></li>
+            <li><a class="link" id="nav_tool" href="javascript:;" onclick="openItem(&#39;tool&#39;);"><span>工具</span></a></li>
+            <li><a class="link" id="nav_microshop" href="javascript:;" onclick="openItem(&#39;microshop&#39;);"><span>微商城</span></a></li>
+        </ul>
+    </nav>
+    <div class="loca">
+        <strong>您的位置:</strong>
+        <div id="crumbs" class="crumbs"><span>控制台</span><span class="arrow">&nbsp;</span><span>欢迎页面</span></div>
+    </div>
+    <div class="toolbar">
+        <ul id="skin" class="skin"><span>换肤</span>
+            <li id="skin_0" class="" title="默认风格"></li>
+            <li id="skin_1" class="" title="Mac风格"></li>
+        </ul>
+        <div class="sitemap"><a id="siteMapBtn" href="http://www.shopnctest.com/huli/index.php#rhis" onclick="showBg(&#39;dialog&#39;,&#39;dialog_content&#39;);"><span>管理地图</span></a></div>
+        <div class="toolmenu"><span class="bar-btn"></span>
+            <ul class="bar-list" style="display: none;">
+                <li><a onclick="openItem(&#39;clear,cache,setting&#39;);" href="javascript:void(0)">更新站点缓存</a></li>
+                <li><a href="http://www.shopnctest.com/huli/" id="iframe_refresh">刷新管理中心</a></li>
+                <li><a href="JavaScript:void(0);" onclick="openItem(&#39;db,db,website&#39;);">备份恢复数据</a></li>
+                <li><a href="http://www.shopnctest.com/huli/index.php?act=updatestat&op=index" target="workspace">更新信用统计</a></li>
+                <li><a href="http://www.shopnctest.com/huli/" title="管理中心-ShopNC商城" rel="sidebar" onclick="javascript:window.external.AddFavorite(&#39;http://www.shopnctest.com/huli/&#39;, &#39;管理中心-ShopNC商城&#39;);return false;">收藏管理中心</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
-
