--- a/branches/2.1/Tpl/Admin/Default/Common/incMenu.html
+++ b/branches/2.1/Tpl/Admin/Default/Common/incMenu.html
@@ -1,65 +1,13 @@
-<div id="leftside" class="leftside">
-    <div class="user">
-        <a href='{:U("Admin/System/pageEditAdmin","uid=$uid")}'>
-            <span class="modify">
-                <span class="mask"></span>
-                <span class="text">编辑</span>
-            </span>
-            <img src="{$Think.session.pic|default='__PUBLIC__/Admin/images/avatar.png'}" width="44" height="44" class="hoverimg" alt="" />
-        </a>
-        <p>登陆者:</p>
-        <p class="username">{$Think.session.admin_name}</p>
-        <p class="userbtn"><a href="{:U('Admin/System/pageEditAdminPasswd')}" title="">修改密码</a></p>
-        <p class="userbtn"><a href="{:U('Admin/User/doLogout')}" title="退出">退出</a></p>
-    </div>
-    <div class="notifications">
-        <p class="notifycount"><a href="" title="" class="notifypop">10</a></p>
-        <p><a href="" title="" class="notifypop">最新通知</a></p>
-        <p class="smltxt">(点击可打开通知)</p>
-    </div>
-    <div id="sliderNavBox" class="sliderNavBox">
-        <div style="display: block; overflow: visible; margin-top: 0px;" id="sliderNavBoxInner">
-            <ul id="nav">
-<!--                <li>
-                    <ul class="navigation">
-                        <li class="heading selected">Current Section</li>
-                        <li><a href="#" title="">Section link here</a></li>
-                        <li><a href="#" title="">Section link here</a></li>
-                        <li><a href="#" title="">Section link here</a></li>
-                    </ul>
-                </li>-->
-                <li>
-                    <a class="expanded heading">管理员管理</a>
-                    <ul class="navigation">
-                        <li><a class="on"  href='{:U("Admin/System/index")}'  title="管理员列表" >管理员列表</a></li>
-                        <li><a href="{:U('Admin/System/pageAddAdmin')}" title="添加管理员">添加管理员</a></li>
-                        <li><a href="{:U('Admin/System/pageLogList')}" title="管理员登陆日志">管理员登陆日志</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="expanded heading">权限组管理</a>
-                    <ul class="navigation">
-                        <li><a href="{:U('Admin/Role/index')}" title="">角色列表</a></li>
-                        <li><a href="{:U('Admin/Role/addRole')}" title="">添加角色</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="expanded heading">权限节点管理</a>
-                    <ul class="navigation">
-                        <li><a href="{:U('Admin/RoleNode/index')}" title="">节点列表</a></li>
-                        <li><a href="{:U('Admin/RoleNode/addRoleNode')}" title="">添加节点</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="expanded heading">菜单管理</a>
-                    <ul class="navigation">
-                        <li><a href="{:U('Admin/RoleNav/index')}" title="菜单列表">菜单列表</a></li>
-                        <li><a href="{:U('Admin/RoleNav/addRoleNav')}" title="添加菜单">添加菜单</a></li>
-                    </ul>
-                </li>  
-            </ul>
-        </div>
-        
-    </div>
-    
+<div id="mainMenu" class="main-menu">
+    <ul id="sort_dashboard" style="display: block;">
+        <li>
+            <dl>
+                <dd>
+                    <ol>
+                        <li nc_type=""><a href="JavaScript:void(0);" name="item_welcome" id="item_welcome" onclick="openItem(&#39;welcome,dashboard,dashboard&#39;);" class="selected">欢迎页面</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_aboutus" id="item_aboutus" onclick="openItem(&#39;aboutus,dashboard,dashboard&#39;);" class="">关于我们</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_base_information" id="item_base_information" onclick="openItem(&#39;base_information,setting,dashboard&#39;);" class="">站点设置</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_member" id="item_member" onclick="openItem(&#39;member,member,dashboard&#39;);" class="">会员管理</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_store" id="item_store" onclick="openItem(&#39;store,store,dashboard&#39;);" class="">店铺管理</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_goods" id="item_goods" onclick="openItem(&#39;goods,goods,dashboard&#39;);" class="">商品管理</a></li><li nc_type=""><a href="JavaScript:void(0);" name="item_order_manage" id="item_order_manage" onclick="openItem(&#39;order_manage,trade,dashboard&#39;);" class="">订单管理</a></li>
+                    </ol>
+                </dd>
+            </dl>
+        </li>
+    </ul>
 </div>
