--- a/branches/2.1/Tpl/Admin/Default/Common/incTop.html
+++ b/branches/2.1/Tpl/Admin/Default/Common/incTop.html
@@ -1,10 +1,181 @@
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Huicms管理后台</title>
-    <link href="__PUBLIC__/Admin/css/styles.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src='__PUBLIC__/Lib/jquery/js/jquery-1.8.3.js'></script>
-    <script src="__PUBLIC__/Lib/validate/jquery.validate.1.9.js"></script>
-    <script src="__PUBLIC__/Lib/validate/jquery.metadata.js"></script>
-    <script src="__PUBLIC__/Lib/validate/messages_cn.js"></script>
-    <script src="__PUBLIC__/Admin/js/global.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;" charset="UTF-8">
+    <title>Huicms</title>
+    <link href="__PUBLIC__/Admin/css/skin_1.css" rel="stylesheet" type="text/css" id="cssfile">
+    <script type="text/javascript" src="__PUBLIC__/Lib/jquery/js/jquery-1.8.3.js"></script>
+    <!--[if IE]>
+    <script src="__PUBLIC__/Admin/js/html5.js"></script>
+    <![endif]-->
+    <script type="text/javascript" src="__PUBLIC__/Admin/js/jquery.validation.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Admin/js/jquery.cookie.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('span.bar-btn').click(function () {
+                $('ul.bar-list').toggle('fast');
+            });
+        });
+
+        $(document).ready(function(){
+            var pagestyle = function() {
+                var iframe = $("#workspace");
+                var h = $(window).height() - iframe.offset().top;
+                var w = $(window).width() - iframe.offset().left;
+                if(h < 300) h = 300;
+                if(w < 973) w = 973;
+                iframe.height(h);
+                iframe.width(w);
+            }
+            pagestyle();
+            $(window).resize(pagestyle);
+            //turn location
+            if($.cookie('now_location_act') != null){
+                openItem($.cookie('now_location_op')+','+$.cookie('now_location_act')+','+$.cookie('now_location_nav'));
+            }else{
+                $('#mainMenu>ul').first().css('display','block');
+                //第一次进入后台时，默认定到欢迎界面
+                $('#item_welcome').addClass('selected');			
+                $('#workspace').attr('src','index.php?act=dashboard&op=welcome');
+            }
+            $('#iframe_refresh').click(function(){
+                var fr = document.frames ? document.frames("workspace") : document.getElementById("workspace").contentWindow;;
+                fr.location.reload();
+            });
+
+        });
+        function openItem(args){
+            //cookie
+            if($.cookie('7210_sys_key') === null){
+                location.href = 'index.php?act=login&op=login';
+                return false;
+            }
+
+            spl = args.split(',');
+            op  = spl[0];
+            try {
+                act = spl[1];
+                nav = spl[2];
+            }
+            catch(ex){}
+            if (typeof(act)=='undefined'){var nav = args;}
+            $('.actived').removeClass('actived');
+            $('#nav_'+nav).addClass('actived');
+
+            $('.selected').removeClass('selected');	
+
+            //show
+            $('#mainMenu ul').css('display','none');
+            $('#sort_'+nav).css('display','block');	
+
+            if (typeof(act)=='undefined'){
+                //顶部菜单事件
+                html = $('#sort_'+nav+'>li>dl>dd>ol>li').first().html();
+                str = html.match(/openItem\('(.*)'\)/ig);
+                arg = str[0].split("'");
+                spl = arg[1].split(',');
+                op  = spl[0];
+                act = spl[1];
+                nav = spl[2];
+                first_obj = $('#sort_'+nav+'>li>dl>dd>ol>li').first().children('a');
+                $(first_obj).addClass('selected');		
+                //crumbs
+                $('#crumbs').html('<span>'+$('#nav_'+nav+' > span').html()+'</span><span class="arrow">&nbsp;</span><span>'+$(first_obj).text()+'</span>');		
+            }else{
+                //左侧菜单事件
+                //location
+                $.cookie('now_location_nav',nav);
+                $.cookie('now_location_act',act);
+                $.cookie('now_location_op',op);
+                //		$("#item_"+op).addClass('selected');//使用name，不使用ID，因为ID有重复的
+                $("a[name='item_"+op+"']").addClass('selected');
+                //crumbs
+                $('#crumbs').html('<span>'+$('#nav_'+nav+' > span').html()+'</span><span class="arrow">&nbsp;</span><span>'+$('#item_'+op).html()+'</span>');
+            }
+
+            src = 'index.php?act='+act+'&op='+op;
+            $('#workspace').attr('src',src);
+
+        }
+
+        $(function(){
+            bindAdminMenu();
+        })
+        function bindAdminMenu(){
+
+            $("[nc_type='parentli']").click(function(){
+                var key = $(this).attr('dataparam');
+                if($(this).find("dd").css("display")=="none"){
+                    $("[nc_type='"+key+"']").slideDown("fast");
+                    $(this).find('dt').css("background-position","-322px -170px");
+                    $(this).find("dd").show();
+                }else{
+                    $("[nc_type='"+key+"']").slideUp("fast");
+                    $(this).find('dt').css("background-position","-483px -170px");
+                    $(this).find("dd").hide();
+                }
+            });
+        }
+    </script>
+    <script type="text/javascript"> 
+        //显示灰色JS遮罩层 
+        function showBg(ct,content){ 
+            var bH=$("body").height(); 
+            var bW=$("body").width(); 
+            var objWH=getObjWh(ct); 
+            $("#pagemask").css({width:bW,height:bH,display:"none"}); 
+            var tbT=objWH.split("|")[0]+"px"; 
+            var tbL=objWH.split("|")[1]+"px"; 
+            $("#"+ct).css({top:tbT,left:tbL,display:"block"}); 
+            $(window).scroll(function(){resetBg()}); 
+            $(window).resize(function(){resetBg()}); 
+        } 
+        function getObjWh(obj){ 
+            var st=document.documentElement.scrollTop;//滚动条距顶部的距离 
+            var sl=document.documentElement.scrollLeft;//滚动条距左边的距离 
+            var ch=document.documentElement.clientHeight;//屏幕的高度 
+            var cw=document.documentElement.clientWidth;//屏幕的宽度 
+            var objH=$("#"+obj).height();//浮动对象的高度 
+            var objW=$("#"+obj).width();//浮动对象的宽度 
+            var objT=Number(st)+(Number(ch)-Number(objH))/2; 
+            var objL=Number(sl)+(Number(cw)-Number(objW))/2; 
+            return objT+"|"+objL; 
+        } 
+        function resetBg(){ 
+            var fullbg=$("#pagemask").css("display"); 
+            if(fullbg=="block"){ 
+                var bH2=$("body").height(); 
+                var bW2=$("body").width(); 
+                $("#pagemask").css({width:bW2,height:bH2}); 
+                var objV=getObjWh("dialog"); 
+                var tbT=objV.split("|")[0]+"px"; 
+                var tbL=objV.split("|")[1]+"px"; 
+                $("#dialog").css({top:tbT,left:tbL}); 
+            } 
+        } 
+
+        //关闭灰色JS遮罩层和操作窗口 
+        function closeBg(){ 
+            $("#pagemask").css("display","none"); 
+            $("#dialog").css("display","none"); 
+        } 
+    </script>
+    <script type="text/javascript"> 
+        $(function(){   
+            var $li =$("#skin li");   
+            $li.click(function(){   
+                $("#"+this.id).addClass("selected").siblings().removeClass("selected");
+                $("#cssfile").attr("href","http://www.shopnctest.com/huli/templates/css/"+ (this.id) +".css");   
+                $.cookie( "MyCssSkin" ,  this.id , { path: '/', expires: 10 });  
+
+                $('iframe').contents().find('#cssfile2').attr("href","http://www.shopnctest.com/huli/templates/css/"+ (this.id) +".css"); 
+            });   
+
+            var cookie_skin = $.cookie( "MyCssSkin");   
+            if (cookie_skin) {   
+                $("#"+cookie_skin).addClass("selected").siblings().removeClass("selected");
+                $("#cssfile").attr("href","http://www.shopnctest.com/huli/templates/css/"+ cookie_skin +".css"); 
+                $.cookie( "MyCssSkin" ,  cookie_skin  , { path: '/', expires: 10 }); 
+            }   
+        });
+    </script>
 </head>
